--- a/src/main/webapp/scripts/app/entities/message/message-detail.html
+++ b/src/main/webapp/scripts/app/entities/message/message-detail.html
@@ -23,7 +23,7 @@
                     <span translate="project1App.message.time">Time</span>
                 </td>
                 <td>
-                    <span class="form-control-static">{{message.time | date:'mediumDate'}}</span>
+                    <span class="form-control-static">{{message.time | date:'medium'}}</span>
                 </td>
             </tr>
             <tr>
