--- a/src/main/webapp/scripts/app/entities/message/messages.html
+++ b/src/main/webapp/scripts/app/entities/message/messages.html
@@ -1,4 +1,4 @@
-<!--<div>
+<div>
     <h2 translate="project1App.message.home.title">Messages</h2>
     <jh-alert></jh-alert>
     <div class="container-fluid">
@@ -6,7 +6,7 @@
             <div class="col-xs-4 no-padding-left">
                 <button class="btn btn-primary" ui-sref="message.new" >
                     <span class="glyphicon glyphicon-plus"></span>
-                    <span
+                    <span 
 class="hidden-xs"                        translate="project1App.message.home.createLabel">Create new Message
                     </span>
                 </button>
@@ -42,7 +42,7 @@ class="hidden-xs"                        translate="project1App.message.home.cre
                 <tr ng-repeat="message in messages track by message.id">
                     <td><a ui-sref="message.detail({id:message.id})">{{message.id}}</a></td>
                     <td>{{message.text}}</td>
-                        <td>{{message.time | date:'mediumDate'}}</td>
+                    <td>{{message.time | date:'medium'}}</td>
                     <td>
                         <a ui-sref="conversation.detail({id:message.conversation.id})">{{message.conversation.id}}</a>
                     </td>
@@ -53,7 +53,7 @@ class="hidden-xs"                        translate="project1App.message.home.cre
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
                                     ui-sref="message.detail({id:message.id})"
-                                    class="btn btn-info btn-sm">
+                                    class="btn btn-info btn-sm"> 
                                 <span class="glyphicon glyphicon-eye-open"></span>
                                 <span class="hidden-xs hidden-sm" translate="entity.action.view"></span>
                             </button>
@@ -65,7 +65,7 @@ class="hidden-xs"                        translate="project1App.message.home.cre
                             </button>
                             <button type="submit"
                                     ui-sref="message.delete({id:message.id})"
-                                    class="btn btn-danger btn-sm">
+                                    class="btn btn-danger btn-sm">                                    
                                 <span class="glyphicon glyphicon-remove-circle"></span>
                                 <span class="hidden-xs hidden-sm" translate="entity.action.delete"></span>
                             </button>
@@ -78,5 +78,4 @@ class="hidden-xs"                        translate="project1App.message.home.cre
     <div class="text-center">
         <uib-pagination class="pagination-sm" total-items="totalItems" ng-model="page" ng-change="loadAll()"></uib-pagination>
     </div>
-</div>-->
-
+</div>
