--- a/src/main/webapp/scripts/app/entities/message/message-dialog.html
+++ b/src/main/webapp/scripts/app/entities/message/message-dialog.html
@@ -21,13 +21,9 @@
         </div>
         <div class="form-group">
             <label class="control-label" translate="project1App.message.time" for="field_time">Time</label>
-                <div class="input-group">
-                    <input id="field_time" type="text" class="form-control" uib-datepicker-popup="{{dateformat}}" ng-model="message.time" is-open="datePickerForTime.status.opened"
-                    />
-                    <span class="input-group-btn">
-                        <button type="button" class="btn btn-default" ng-click="datePickerForTimeOpen($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-                    </span>
-                </div>
+            <input type="datetime-local" class="form-control" name="time" id="field_time"
+                    ng-model="message.time"
+                     />
         </div>
 
         <div class="form-group">
