--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -225,41 +225,44 @@
                                 ng-change="loadAll()"></uib-pagination>
             </div>
         </div>
-        <div class="col-lg-6" style="height: 100%;" id="col-right" ng-init="showDetails==true">
-            <ng-map
-                zoom-control="true"
-                zoom-control-options='{style:"small",position:"top_right"}'
-                map-type-control="false"
-                overview-map-control="false"
-                pan-control="false"
-                rotate-control="false"
-                scale-control="false"
-                street-view-control="false"
-                zoom-to-include-markers="auto" style="height: 100%;">
-                <custom-marker ng-repeat="spaceDTO in spaces"
-                               id="custom-marker-{{$index}}"
-                               position="[{{spaceDTO.space.lat}},{{spaceDTO.space.lng}}]"
-                               data="{{data[$index]}}"
-                               on-click="vm.map.showInfoWindow('foo', 'custom-marker-'+$index)">
-                    <!--<a ng-click="onClickMarker(spaceDTO.space); showDetails = ! showDetails" ng-class="{ 'hidden':  showDetails }">-->
-                    <a ng-click="onClickMarker(spaceDTO.space)">
-                        <div class="cm outside">
-                            {{spaceDTO.space.price}}€
+        <div class="row">
+            <div class="col-lg-6" style="height: 100%;" id="col-right" ng-init="showDetails==true">
+                <ng-map
+                    zoom-control="true"
+                    zoom-control-options='{style:"small",position:"top_right"}'
+                    map-type-control="false"
+                    overview-map-control="false"
+                    pan-control="false"
+                    rotate-control="false"
+                    scale-control="false"
+                    street-view-control="false"
+                    zoom-to-include-markers="auto" style="height: 100%;">
+                    <custom-marker ng-repeat="spaceDTO in spaces"
+                                   id="custom-marker-{{$index}}"
+                                   position="[{{spaceDTO.space.lat}},{{spaceDTO.space.lng}}]"
+                                   data="{{data[$index]}}"
+                                   on-click="vm.map.showInfoWindow('foo', 'custom-marker-'+$index)">
+                        <!--<a ng-click="onClickMarker(spaceDTO.space); showDetails = ! showDetails" ng-class="{ 'hidden':  showDetails }">-->
+                        <a ng-click="onClickMarker(spaceDTO.space)">
+                            <div class="cm outside">
+                                {{spaceDTO.space.price}}€
+                            </div>
+                        </a>
+                    </custom-marker>
+                    <info-window id="foo" on-mouseover="vm.mouseover()">
+                        <div>
+                            <img src="http://placehold.it/150x150"><br/>
+                            <a ui-sref="space.detail({id:selectedSpace.id})">{{selectedSpace.name}}</a><br/>
+                            {{selectedSpace.price}}€<br/>
                         </div>
-                    </a>
-                </custom-marker>
-                <info-window id="foo" on-mouseover="vm.mouseover()">
-                    <div>
-                        <img src="http://placehold.it/150x150"><br/>
-                        <a ui-sref="space.detail({id:selectedSpace.id})">{{selectedSpace.name}}</a><br/>
-                        {{selectedSpace.price}}€<br/>
-                    </div>
-                </info-window>
-            </ng-map>
-            <!--
-                -Esconder PIN cuando abre el detail.
-                -Hover en un espacio cambie color del PIN.
-             -->
+                    </info-window>
+                </ng-map>
+                <!--
+                    -Esconder PIN cuando abre el detail.
+                    -Hover en un espacio cambie color del PIN.
+                 -->
+            </div>
+
         </div>
     </div>
 </div>
