--- a/src/main/webapp/scripts/app/entities/favorite/favorites.html
+++ b/src/main/webapp/scripts/app/entities/favorite/favorites.html
@@ -93,7 +93,7 @@ class="hidden-xs"                        translate="project1App.favorite.home.cr
             </h4>
         <h4>
         Favoritos: {{filtered.length}}</h4>
-        <div class="col-xs-8 col-sm-6 col-md-4"  ng-repeat="favorite in  filtered = (favorites | filter:filterExpr)">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4"  ng-repeat="favorite in  filtered = (favorites | filter:filterExpr)">
             <div class="thumbnail material">
                 <a ui-sref="space.detail({id:favorite.space.id})">
                     <!--<img data-ng-src="{{'data:' + space.imgContentType + ';base64,' + space.img}}" style="height: 200px; min-width: 100%;" ng-if="space.img"/>-->
