--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -278,6 +278,7 @@
     <script src="https://maps.google.com/maps/api/js?libraries=visualization,drawing,geometry,places"></script>
     <script src="scripts/app/main/login.controller.js"></script>
     <script src="bower_components/alv-ch-ng.text-truncate/dist/alv-ch-ng.textTruncate.js"></script>
+    <script src="bower_components/ng-flow/dist/ng-flow-standalone.min.js"></script>
     <!-- endbuild -->
 </body>
 </html>
