--- a/src/main/webapp/scripts/app/entities/space/space-dialog.html
+++ b/src/main/webapp/scripts/app/entities/space/space-dialog.html
@@ -4,7 +4,8 @@
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                     ng-click="clear()">&times;</button>
-            <h4 class="modal-title" id="mySpaceLabel" translate="project1App.space.home.createOrEditLabel">Create or edit a Space</h4>
+            <h4 class="modal-title" id="mySpaceLabel" translate="project1App.space.home.createOrEditLabel">Create or
+                edit a Space</h4>
         </div>
         <div class="modal-body">
             <jh-alert-error></jh-alert-error>
@@ -15,6 +16,19 @@
                        ng-model="space.name"
                 />
             </div>
+
+            <div flow-init
+                 flow-name="uploader.flow"
+                 flow-files-added="processFiles($files)">
+                <input flow-btn type="file" value="Upload Images" type="button">
+                <div ng-repeat="image in uploader.flow.files track by $index">
+                    <span class="text">Blob image displayed with "flow-img"</span><img class="preview" flow-img="image"/><br>
+                    <span class="text">Base64 image displayed with "ng-src"</span> <img class="preview" ng-src="{{imageStrings[$index]}}"/>
+                </div>
+            </div>
+
+
+
             <div class="form-group">
                 <label class="control-label" translate="project1App.space.description" for="field_description">Description</label>
                 <input type="text" class="form-control" name="description" id="field_description"
@@ -25,14 +39,16 @@
                    ng-model="vm.address"
                    component-restrictions="{country:'es'}"
                    types="{{types}}"
-                   on-place-changed="vm.placeChanged()" /> <br/>
+                   on-place-changed="vm.placeChanged()"/> <br/>
             <div ng-show="vm.place">
                 Address = {{vm.place.formatted_address}} <br/>
                 Location: {{vm.place.geometry.location}}<br/>
                 Lat: {{vm.place.geometry.location.lat}}<br/>
                 address : {{vm.address}}
             </div>
-            <ng-map   id="foomap"><marker position="{{vm.place.geometry.location}}"></marker></ng-map>
+            <ng-map id="foomap">
+                <marker position="{{vm.place.geometry.location}}"></marker>
+            </ng-map>
 
             <div class="form-group">
                 <label class="control-label" translate="project1App.space.price" for="field_price">Price</label>
@@ -41,7 +57,8 @@
                 />
             </div>
             <div class="form-group">
-                <label class="control-label" translate="project1App.space.personMax" for="field_personMax">PersonMax</label>
+                <label class="control-label" translate="project1App.space.personMax"
+                       for="field_personMax">PersonMax</label>
                 <input type="number" class="form-control" name="personMax" id="field_personMax"
                        ng-model="space.personMax"
                 />
@@ -55,7 +72,8 @@
 
             <div class="form-group">
                 <label translate="project1App.space.service" for="field_service">service</label>
-                <select class="form-control" id="field_service" multiple name="service" ng-model="space.services" ng-options="service as service.name for service in services track by service.id"></select>
+                <select class="form-control" id="field_service" multiple name="service" ng-model="space.services"
+                        ng-options="service as service.name for service in services track by service.id"></select>
             </div>
         </div>
         <div class="modal-footer">
@@ -65,7 +83,7 @@
         </div>
     </form>
     <style>
-        .pac-container{
+        .pac-container {
             z-index: 2000000;
         }
     </style>
