Upload single image.

--- a/src/main/webapp/scripts/app/entities/space/space-dialog.html
+++ b/src/main/webapp/scripts/app/entities/space/space-dialog.html
@@ -17,15 +17,15 @@
                 />
             </div>
 
-            <div flow-init
-                 flow-name="uploader.flow"
-                 flow-files-added="processFiles($files)">
-                <input flow-btn type="file" value="Upload Images" type="button">
-                <div ng-repeat="image in uploader.flow.files track by $index">
-                    <span class="text">Blob image displayed with "flow-img"</span><img class="preview" flow-img="image"/><br>
-                    <span class="text">Base64 image displayed with "ng-src"</span> <img class="preview" ng-src="{{imageStrings[$index]}}"/>
-                </div>
-            </div>
+
+            <form enctype="multipart/form-data" name="form">
+                Single Image with validations
+                <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'"
+                     ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100">Select</div>
+                Drop files: <div ngf-drop ng-model="files" class="drop-box">Drop</div>
+                <button type="submit" ng-click="submit()">submit</button>
+            </form>
+
 
 
 
