Upload multiple files:
Task: save image name and space_id

--- a/src/main/webapp/scripts/app/entities/space/space-dialog.html
+++ b/src/main/webapp/scripts/app/entities/space/space-dialog.html
@@ -25,7 +25,14 @@
                 Drop files: <div ngf-drop ng-model="files" class="drop-box">Drop</div>
                 <button type="submit" ng-click="submit()">submit</button>
             </form>
+            <button ngf-accept="image/jpeg,image/pjpeg,image/gif,image/png" ng-change="artworkShow(file)" ngf-select ng-model="artworkFile" class="md-raised">
+                <i class="material-icons" style="line-height: 35px; ">add_a_photo</i>
+                Upload image
+            </button>
 
+            <div class="artwork__holder">
+
+            </div>
 
 
 
