Revert "Image upload done"
This reverts commit c843a63af0215402056b57f37768ab3bf16d96ba.

--- a/src/main/webapp/scripts/app/entities/space/space-detail.html
+++ b/src/main/webapp/scripts/app/entities/space/space-detail.html
@@ -1,4 +1,4 @@
-    <paper-toolbar class="tall" id="main" style="background: url(uploads/{{space.name}}{{space.id}}0.jpg) no-repeat center center fixed; height: 350px;
+    <paper-toolbar class="tall" id="main" style="background: url(http://placehold.it/550x550) no-repeat center center fixed; height: 350px;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
