Image gallery works on /images

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,10 @@
         <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css" />
+        <link rel="stylesheet" type="text/css" href="bower_components/ngGallery/src/css/screen.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="bower_components/ngGallery/src/css/ngGallery.css">
+
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css assets/styles/main.css -->
@@ -278,7 +282,7 @@
     <script src="https://maps.google.com/maps/api/js?libraries=visualization,drawing,geometry,places"></script>
     <script src="scripts/app/main/login.controller.js"></script>
     <script src="bower_components/alv-ch-ng.text-truncate/dist/alv-ch-ng.textTruncate.js"></script>
-    <script src="bower_components/ng-flow/dist/ng-flow-standalone.min.js"></script>
+    <script src="bower_components/ngGallery/src/js/ngGallery.js"></script>
     <!-- endbuild -->
 </body>
 </html>
