--- a/src/main/webapp/scripts/app/entities/image/images.html
+++ b/src/main/webapp/scripts/app/entities/image/images.html
@@ -6,7 +6,7 @@
             <div class="col-xs-4 no-padding-left">
                 <button class="btn btn-primary" ui-sref="image.new" >
                     <span class="glyphicon glyphicon-plus"></span>
-                    <span 
+                    <span
 class="hidden-xs"                        translate="project1App.image.home.createLabel">Create new Image
                     </span>
                 </button>
@@ -36,6 +36,9 @@ class="hidden-xs"                        translate="project1App.image.home.creat
                     <th></th>
                 </tr>
             </thead>
+            <ng-gallery images="imageGallery">
+            </ng-gallery>
+
             <tbody>
                 <tr ng-repeat="image in images track by image.id">
                     <td><a ui-sref="image.detail({id:image.id})">{{image.id}}</a></td>
@@ -47,7 +50,7 @@ class="hidden-xs"                        translate="project1App.image.home.creat
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
                                     ui-sref="image.detail({id:image.id})"
-                                    class="btn btn-info btn-sm"> 
+                                    class="btn btn-info btn-sm">
                                 <span class="glyphicon glyphicon-eye-open"></span>
                                 <span class="hidden-xs hidden-sm" translate="entity.action.view"></span>
                             </button>
@@ -59,7 +62,7 @@ class="hidden-xs"                        translate="project1App.image.home.creat
                             </button>
                             <button type="submit"
                                     ui-sref="image.delete({id:image.id})"
-                                    class="btn btn-danger btn-sm">                                    
+                                    class="btn btn-danger btn-sm">
                                 <span class="glyphicon glyphicon-remove-circle"></span>
                                 <span class="hidden-xs hidden-sm" translate="entity.action.delete"></span>
                             </button>
