--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -251,7 +251,7 @@
                     </custom-marker>
                     <info-window id="foo" on-mouseover="vm.mouseover()">
                         <div>
-                            <img src="http://placehold.it/150x150"><br/>
+                            <img src="uploads/{{selectedSpace.name}}{{selectedSpace.id}}0.jpg" height="200" width="300"><br/>
                             <a ui-sref="space.detail({id:selectedSpace.id})">{{selectedSpace.name}}</a><br/>
                             {{selectedSpace.price}}€<br/>
                         </div>
